language/move-lang/tests/move_check/liveness/dead_refs_loop_invalid.exp
error: 

   ┌── tests/move_check/liveness/dead_refs_loop_invalid.move:6:17 ───
   │
 6 │             _ = x;
   │                 ^ Invalid copy of local 'x'
   ·
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
   │

error: 

    ┌── tests/move_check/liveness/dead_refs_loop_invalid.move:16:16 ───
    │
 16 │            _ = x;
    │                ^ Invalid copy of local 'x'
    ·
 13 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_loop_invalid.move:25:17 ───
    │
 25 │             _ = x;
    │                 ^ Invalid copy of local 'x'
    ·
 22 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

